# meetup-cookiecutter-pypackage

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: update.yml
